perf: Refactor to use List.toList() and simplify logic